# quant-vault

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  build.gradle.kts  settings.gradle.kts  user.properties  user.properties.template
.claude/: CLAUDE.md  CONTRIBUTING.md  settings.json
.claude/commands/: plan-android-work.md  (+2 more)
.git_corrupted_backup/: COMMIT_EDITMSG  config  index  opencode  packed-refs
.github/: CODEOWNERS  renovate.json  zizmor.yml
annotation/: build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
authenticator/: README.md  build.gradle.kts  proguard-rules.pro
authenticatorbridge/: README.md  build.gradle.kts
core/: README.md  build.gradle.kts
cxf/: build.gradle.kts
data/: build.gradle.kts
docs/: ARCHITECTURE.md  STYLE_AND_BEST_PRACTICES.md  TROUBLESHOOTING.md  bitwarden-style.xml
fastlane/: Appfile  Fastfile
graphify-out/: .graphify_analysis.json  .graphify_detect.json  check_security.py  check_spec.py
network/: README.md  build.gradle.kts
scripts/: get-repo-changelog.sh  public_suffix_list_generator.sh  update-sdk-version.sh  update_app_ci_build_info.sh
sdk/: build.gradle.kts
securevault-core/: Cargo.toml
securevault-core/src/: lib.rs
securevault-core/src/crypto/: aes.rs  chacha20.rs  kdf.rs  mod.rs  rng.rs
securevault-core/src/passkey/: mod.rs
securevault-core/src/sync/: mod.rs
securevault-core/src/totp/: mod.rs
securevault-core/src/vault/: mod.rs
temp-sdk/: AndroidManifest.xml  build.gradle.kts
testharness/: README.md  build.gradle.kts  proguard-rules.pro
ui/: build.gradle.kts
(+2715 files in other folders)
